# chat_bot

./: 1pyproject.toml  pyproject.toml
chroma_db/: chroma.sqlite3
m_agent_chatbot/: pyproject.toml
m_agent_chatbot/data/chroma_db/: chroma.sqlite3
m_agent_chatbot/src/multi_agent_chatbot/: app.py
multi_agent_chatbot/: pyproject.toml
multi_agent_chatbot/src/multi_agent_chatbot/: agent_logic.py  app.py  llm_config.py
multi_agent_chatnot/: pyproject.toml  rythem.md
multi_agent_chatnot/src/multi_agent_chatbot/: rag_handler.py
semipython/: app.py  main.py  multi_agent.py  ollama_client.py  plzrdme.md  pyproject.toml  rag.py  vector_store.py
src/chat_bot/: 1ipc.py  cloud.py  main.py  mian.py
