# pyproject.toml
[tool.poetry]
name = "ollama-multi-agent"
version = "0.1.0"
description = "Multi-agent system using Ollama models with RAG capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^4.0.0"
langchain = "^0.1.0"
langgraph = "^0.0.20"
chromadb = "^0.4.18"
pypdf = "^3.15.1"
sentence-transformers = "^2.2.2"
requests = "^2.31.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
